# WodaBrowser

./: .gitignore  Browser.py  Code.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.py
tests/: conftest.py  test_browser.py  test_code_executor.py  test_file_system_handler.py
wodabrowser/: __init__.py  browser.py  file_system_handler.py  post_install.py  web_channel_extension.py
wodabrowser/html/: index.html  nautilus.css  nautilus.js
wodabrowser/icons/: wodabrowser.desktop
wodabrowser/js/: browser_functions.js  browser_functions_patch.js  qwebchannel.js  signal_debug.js
